# Culverin

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: build_wheels.yml
docs/: ARCHITECTURE.md  BENCHMARKS.md  COLLISIONS.md  COMMONBUGS.md  ECS_INTEGRATION_GUIDE.md  HANDLES.md  MANUAL.md  THREADING.md  VEHICLES.md
src/culverin/: __init__.py  __init__.pyi  _culverin.py  _culverin_c.pyi  culverin.c  culverin.h  culverin_character.c  culverin_character.h  culverin_command_buffer.c  culverin_command_buffer.h  culverin_constraint.c  culverin_constraint.h  culverin_constraint_factory.c  culverin_constraint_factory.h  culverin_contact_event_definitions.h  culverin_contact_listener.c  culverin_contact_listener.h  culverin_debug_render.c  culverin_debug_render.h  culverin_filters.h  culverin_getters.c  culverin_getters.h  culverin_internal_query.c  culverin_internal_query.h  culverin_math.h  culverin_parsers.c  culverin_parsers.h  culverin_physics_world_internal.c  culverin_physics_world_internal.h  culverin_query_methods.c  culverin_query_methods.h  culverin_ragdoll.c  culverin_ragdoll.h  culverin_shadow_sync.c  culverin_shadow_sync.h  culverin_threading.h  culverin_tracked_vehicle.c  culverin_tracked_vehicle.h  culverin_types.h  culverin_vehicle.c  (+4 more)
tests/: pybullet_bench.py  run_suite.py  thread_stress.py  thread_stress2.py
