[build-system]
requires = ["scikit-build-core>=0.10.0", "ninja"]
build-backend = "scikit_build_core.build"

[project]
name = "culverin"
version = "0.1.0b1"
description = "High-performance Jolt Physics bindings for Python featuring Shadow Buffers and Free-Threading support."
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Mai Huy Hiếu"}
]
license = {text = "MIT"}
keywords = [
    "physics", 
    "jolt", 
    "gamedev", 
    "free-threading", 
    "3d", 
    "simulation", 
    "collision-detection",
    "robotics"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: C",
    "Programming Language :: C++",
    "Topic :: Games/Entertainment",
    "Topic :: Multimedia :: Graphics :: 3D Rendering",
    "Topic :: Scientific/Engineering :: Physics",
]
# Install your own NumPy.
dependencies = []

[project.urls]
Homepage = "https://github.com/Evilpasture/culverin"
Documentation = "https://github.com/Evilpasture/culverin/tree/master/docs"
Repository = "https://github.com/Evilpasture/culverin.git"
"Bug Tracker" = "https://github.com/Evilpasture/culverin/issues"

[tool.scikit-build]
cmake.build-type = "Release"
cmake.args = [
    "-T", "ClangCL",
    "-DDOUBLE_PRECISION=ON",
    "-DUSE_MTL=OFF",
    "-DUSE_CPU_COMPUTE=OFF",
    "-DINTEROP_COMPUTE=OFF",
    "-DUSE_GL_COMPUTE=OFF",
    "-DGENERATE_SAMPLES=OFF",
    "-DGENERATE_UNIT_TESTS=OFF",
    "-DCMAKE_OSX_DEPLOYMENT_TARGET=13.0"
]
wheel.install-dir = "culverin"

[[tool.scikit-build.overrides]]
if.platform-system = "linux"
# Ensure we use modern C++ and SIMD on Linux workers
cmake.args = ["-DCMAKE_CXX_FLAGS=-mavx2 -mfma"]

# Ensure we don't ship build artifacts or raw source in the final wheel
wheel.exclude = [
    "culverin/include/**",
    "culverin/lib/**",
    "culverin/share/**",
    "src/**",
    "**/*.c",
    "**/*.h",
    "**/*.cpp",
    "**/*.obj",
    "**/*.a",
    "**/*.lib",
]

sdist.include = ["culverin/*.pyi"]